Fixed white space when shrunk

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
+    overflow: auto;
 }
 
 .a-container {
